--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Merge Conflict Practice</title>
+  <link rel="stylesheet" href="./merge-style.css">
 </head>
 <body>
-  <div>
+  <div class="square-1">
     <h3>Square 1</h3>
   </div>
-  <div>
+  <div class="square-2">
     <h3>Square 2</h3>
   </div>
-  <div>
+  <div class="square-3">
     <h3>Square 3</h3>
   </div>
 </body>
